--- a/BizLand/index.html
+++ b/BizLand/index.html
@@ -334,51 +334,70 @@
           <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
         </div>
 
-        <div class="row">
+     <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class='bx bxs-truck'></i></div>
-              <h4><a href="">Drainage Cleaning</a></h4>
+              <!-- <div class="icon"><i class='bx bxs-truck'></i></div> -->
+              <div class="service-icn bg-light-white flex-center">
+                <img src="C:/Users/HP/Downloads/drain.png" alt=" ">
+            </div>
+              <h4><a href="">Drainage Cleaning and Maintenance Services</a></h4>
               <p>Drain cleaning is necessary to eliminate blockages and keep drains working smoothly, as well as to avoid future drain problems in your house. You may avoid clogs by taking the effort to clear your drains on a regular basis.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Industrial Raw materials Tank Cleaning</a></h4>
+              <!-- <div class="icon"><i class="bx bx-file"></i></div> -->
+              <div class="service-icn bg-light-white flex-center">
+                <img src="C:/Users/HP/Downloads/tank.png" alt=" ">
+            </div>
+              <h4><a href="">Water Tank Cleaning and Maintenance Services </a></h4>
               <p>The process of cleaning industrial tanks and containers in preparation for inspections, eliminating obstructions, and avoiding contamination is known as tank cleaning. Ultra high-pressure water jets are the greatest cleaning option.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">Magni Dolores</a></h4>
+              <!-- <div class="icon"><i class="bx bx-tachometer"></i></div> -->
+              <div class="service-icn bg-light-white flex-center">
+                <img src="C:/Users/HP/Downloads/tank.png" alt=" ">
+            </div>
+              <h4><a href="">Electrical and Electronic Project Works</a></h4>
               <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <span class="line bg-blue"></span>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4><a href="">Nemo Enim</a></h4>
+              <!-- <div class="icon"><i class="bx bx-world"></i></div> -->
+              <div class="service-icn bg-light-white flex-center">
+                <img src="C:/Users/HP/Downloads/gardening.png" alt=" ">
+            </div>
+              <h4><a href="">Gardening,Landscape and Maintenance</a></h4>
               <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-slideshow"></i></div>
-              <h4><a href="">Dele cardo</a></h4>
+              <!-- <div class="icon"><i class="bx bx-slideshow"></i></div> -->
+              <div class="service-icn bg-light-white flex-center">
+                <img src="C:/Users/HP/Downloads/scrap.png" alt=" ">
+            </div>
+              <h4><a href="">Scrap Trading</a></h4>
               <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-arch"></i></div>
-              <h4><a href="">Divera don</a></h4>
+              <!-- <div class="icon"><i class="bx bx-arch"></i></div> -->
+              <div class="service-icn bg-light-white flex-center">
+                <img src="C:/Users/HP/Downloads/construction.png" alt=" ">
+            </div>
+              <h4><a href="">Swimming Pool and Water tank Construction</a></h4>
               <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
             </div>
           </div>
